--- a/.gitignore
+++ b/.gitignore
@@ -55,8 +55,8 @@ MANIFEST
 # Installer logs
 pip-log.txt
 pip-delete-this-directory.txt
-Pipfile
-Pipfile.lock
+djangox/Pipfile
+djangox/Pipfile.lock
 
 # Unit test / coverage reports
 htmlcov/
